# telnet

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
docs/: README
docs/rfcs/: LISTS
include/: telnet.h  telnet_cmds.h  telnet_log.h  telnet_misc.h  telnet_nvt.h  telnet_options.h
lib/: Makefile.am  telnet.c  telnet_cmds.c  telnet_log.c  telnet_nvt.c  telnet_options.c
rfcs/: LISTS
src/: Makefile.am
src/client/: Makefile.am  main.c
tests/: Makefile.am  test_getaddrinfo.c  test_print_initial_read.c
