

AM_CPPFLAGS = \
	-I$(top_srcdir)/include
	$(NULL)

AM_LDFLAGS = \
	$(top_builddir)/lib/libtelnet.la \
	$(NULL)


noinst_PROGRAMS = \
	test_getaddrinfo \
	test_print_initial_read \
	$(NULL)
	 
test_getaddrinfo_SOURCES = \
	test_getaddrinfo.c \
	$(NULL)

test_getaddrinfo_CPPFLAGS = \
	$(NULL)

test_getaddrinfo_LDADD= \
	$(NULL)

test_print_initial_read_SOURCES = \
	test_print_initial_read.c \
	$(NULL)

